# hwdectogl

./: CMakeLists.txt  Makefile  README.md  glHevc  glHevc.c  notes.txt
